--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,8 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "declaration": true,
+    "declarationDir": "./types",
 
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -19,6 +21,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src", "vite.config.ts", "**/*.d.ts"],
+  "include": ["src/**/*.ts", "vite.config.ts", "types.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
