--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src/**/*.ts", "vite.config.ts", "types.d.ts"],
+  "include": ["src/**/*", "vite.config.ts", "types.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
